--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -60,6 +60,8 @@ button {
 	color: #fff;
 	border: none;
 	border-radius: 3px;
+	max-width: 175px;
+	overflow-wrap: break-word;
 	&:hover,
 	&:focus {
 		background-color: #616161;
